# growth-care-bot

./: .gitignore  .pre-commit-config.yaml  README.md  export_requirements.sh  main.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test.py  tk.py
src/application/: azure_setup.py  led.py
src/domain/: azure_setup.py
src/service/: audio_service.py  conversation_service.py
