[project]
dependencies = [
  "openai>=1.61.1",
  "pinpong>=0.6.1",
  "siot>=0.1.7",
  "unihiker>=0.0.27",
  "sounddevice>=0.5.1",
  "pygame>=2.6.1",
  "numpy>=2.2.2",
]
description = "Growth Care Bot"
name = "growth-care-bot"
readme = "README.md"
requires-python = "==3.12.*"
version = "0.3.0"

[dependency-groups]
dev = [
  "black",
  "isort",
  "pre-commit",
  "pylint",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-pylint",
]
