[project]
dependencies = [
  "numpy~=2.2",
  "openai~=1.109",
  "pinpong~=0.6",
  "pygame~=2.6",
  "siot~=0.1",
  "sounddevice~=0.5",
  "unihiker~=0.0.28",
]
description = "BoBao Bot"
name = "Bobot"
readme = "README.md"
requires-python = "==3.13.*"
version = "0.5.0"

[dependency-groups]
dev = [
  "black",
  "isort",
  "pre-commit",
  "pylint",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-pylint",
  "pytest-xdist",
  "ruff",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
known_third_party = []
line_length = 100
multi_line_output = 0

[tool.coverage.report]
fail_under = 0
